# WebScrapersApp

./: LICENSE  README.md  snapshot_data.json  snapshot_result.json  snapshot_result_booking.json  snapshot_result_chatgpt.json
backend/: main.py  package-lock.json  pyproject.toml  run_snapshot.py  snapshot_operation.py  snapshot_result_chatgpt  snapshot_results.json  start_server.bat
backend/agents/: run_snapshot.py
backend/db/: session.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
